--- a/public/css/homeDesktop.css
+++ b/public/css/homeDesktop.css
@@ -139,7 +139,7 @@
 }
 
 .parallax-section > .bg-img-fuera {
-    background-image: url("/img/fotos_version_1900x--/Fotos_seccion2 _proyectos/8-Podcast_fuera_de_set_950x956.png");
+    background-image: url("/img/fotos_version_1900x--/Fotos_seccion2 _proyectos/8-Podcast_fuera_de_set-travesaคo-950x956.png");
     background-position: right center;
 }
 .parallax-section > .bg-img-misteriosa {
@@ -163,7 +163,7 @@
     background-position: left center;
 }
 .parallax-section > .bg-img-off {
-    background-image: url("/img/fotos_version_1900x--/Fotos_seccion2 _proyectos/14-COMING_SOON_podcast_voz_en_off_950x956.png");
+    background-image: url("/img/fotos_version_1900x--/Fotos_seccion2 _proyectos/14-podcast_voz_en_off_950x956.png");
     background-position: right center;
 }
 
