--- a/public/css/homeLaptop.css
+++ b/public/css/homeLaptop.css
@@ -117,7 +117,7 @@
     }
 
     .parallax-section > .bg-img-fuera {
-        background-image: url("/img/fotos_version_1024x816_version_portatil/seccion2_fotos_proyectos/8-Podcast-Fuera_de_Set_682x512.png") !important;
+        background-image: url("/img/fotos_version_1024x816_version_portatil/seccion2_fotos_proyectos/8-Podcast-Fuera_de_Set-travesaคo_682x512.png") !important;
     }
     .parallax-section > .bg-img-misteriosa {
         background-image: url("/img/fotos_version_1024x816_version_portatil/seccion2_fotos_proyectos/9-Misteriosa-Piloto_Coproductores_682x512.png") !important;
@@ -135,7 +135,7 @@
         background-image: url("/img/fotos_version_1024x816_version_portatil/seccion2_fotos_proyectos/13-Concierto_Movistar_Arena_682x512.png") !important;
     }
     .parallax-section > .bg-img-off {
-        background-image: url("/img/fotos_version_1024x816_version_portatil/seccion2_fotos_proyectos/14-pod_cast_voz_en_off_coming_soon_682x512.png") !important;
+        background-image: url("/img/fotos_version_1024x816_version_portatil/seccion2_fotos_proyectos/14-pod_cast_voz_en_off_682x512.png") !important;
     }
 
     #proyectos .caption-container.grey-wrapper.p-3{
