--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -119,7 +119,6 @@
                     </picture>
                     <div class="caption-container grey-wrapper p-3">
                         <a href="#">
-                            <p class="text-center text-pwhite text-uppercase grouch shdw spc pt-18">coming soon</p>
                             <h3 class="text-pwhite text-center grouch shdw spc pt-18"><%= __('projects.commons.cortometraje')  %> - los restos de la cama</h3>
                             <p class="text-center text-pwhite grouch shdw spc pt-18"><%= __('projects.commons.coproductores') %></p>
                         </a>
@@ -244,43 +243,16 @@
                         </div>
                     </div>
                 </div>
-                <article class="col-6 parallax-article bg-img-fuera d-flex justify-content-center align-items-center to-blur proj-art-8">
+                <article class="col-6 parallax-article bg-img-off d-flex justify-content-center align-items-center to-blur proj-art-14">
                     <picture>
-                        <img src="/img/fotos_version_mobile_428X908/seccion_2_proyectos/8podcast-fuera_de_set_214x916.png" alt="Podcast - Fuera de set" class="parallax-img" data-speed="0.3" data-parallax="scroll">
+                        <img src="/img/fotos_version_mobile_428X908/seccion_2_proyectos/14-Podcast_Voz_en_OFF_214x916.png" alt="Podcast - Voz en OFF" class="parallax-img" data-speed="0.3" data-parallax="scroll">
                     </picture>
                     <div class="caption-container grey-wrapper p-3">
-                        <a href="#" data-bs-toggle="modal" data-bs-target="#fuera-viewer">
-                            <h3 class="text-pwhite text-center grouch shdw spc pt-22">Podcast - Fuera de Set</h3>
+                        <a href="https://www.youtube.com/@VozEnOff_Podcast" target="_blank">
+                            <h3 class="text-pwhite text-center grouch shdw spc pt-18">Podcast VOZ EN OFF</h3>
                         </a>
                     </div>
                 </article>
-                <div class="modal fade" id="fuera-viewer" tabindex="-1" aria-labelledby="fuera-label" aria-hidden="true" data-video-type="youtube" data-video-id="QNHbO-Z4yNs">
-                    <div class="modal-wrapper bg-pblack d-flex justify-content-center">
-                        <div class="modal-dialog bg-pblack">
-                            <div class="modal-content bg-pblack">
-                                <div class="modal-header text-pwhite">
-                                    <h2 class="modal-title fs-5 popps-sb pt-40" id="fuera-label"><a href="https://www.youtube.com/@fueradeset" target="_blank">Fuera de Set</a></h2>
-                                    <button type="button" class="btn btn-closing" data-bs-dismiss="modal" aria-label="Cerrar">
-                                        <img src="/img/cerrador_claqueta_64x64.svg" alt="T2F Cerrar">
-                                    </button>
-                                </div>
-                            </div>
-                            <div class="modal-body d-flex flex-wrap justify-content-center align-items-center">
-                                <iframe id="fuera-iframe" class="video-viewer embed-responsive-item"
-                                        src="https://www.youtube.com/embed/QNHbO-Z4yNs?enablejsapi=1"
-                                        title="YouTube video player"
-                                        frameborder="0"
-                                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                        allowfullscreen>
-                                </iframe>
-                                <div class="col-md-12 iframe-text">
-                                    <p class="text-pwhite text-justfy popps-r pt-14"><%= __('projects.modals.row3_p2.p1') %></p>
-                                    <p class="text-pwhite text-justfy popps-r pt-14"><%= __('projects.modals.row3_p2.p2') %></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
             <div class="row parallax-section">
                 <article class="col-6 parallax-article bg-img-misteriosa d-flex justify-content-center align-items-center to-blur proj-art-9">
@@ -400,17 +372,43 @@
                         </a>
                     </div>
                 </article>
-                <article class="col-6 parallax-article bg-img-off d-flex justify-content-center align-items-center to-blur proj-art-14">
+                <article class="col-6 parallax-article bg-img-fuera d-flex justify-content-center align-items-center to-blur proj-art-8">
                     <picture>
-                        <img src="/img/fotos_version_mobile_428X908/seccion_2_proyectos/14-Coming_soon_Podcast_Voz_en_OFF_214x916.png" alt="Podcast - Voz en OFF" class="parallax-img" data-speed="0.3" data-parallax="scroll">
+                        <img src="/img/fotos_version_mobile_428X908/seccion_2_proyectos/8-podcast-fuera_de_set-travesaคo_214x916.png" alt="Podcast - Fuera de set" class="parallax-img" data-speed="0.3" data-parallax="scroll">
                     </picture>
                     <div class="caption-container grey-wrapper p-3">
-                        <a href="#" data-bs-toggle="modal" data-bs-target="#">
-                            <p class="text-center text-pwhite text-uppercase grouch shdw spc pt-18">coming soon</p>
-                            <h3 class="text-pwhite text-center grouch shdw spc pt-18">Podcast VOZ EN OFF</h3>
+                        <a href="#" data-bs-toggle="modal" data-bs-target="#fuera-viewer">
+                            <h3 class="text-pwhite text-center grouch shdw spc pt-22">Podcast - Fuera de Set</h3>
                         </a>
                     </div>
                 </article>
+                <div class="modal fade" id="fuera-viewer" tabindex="-1" aria-labelledby="fuera-label" aria-hidden="true" data-video-type="youtube" data-video-id="QNHbO-Z4yNs">
+                    <div class="modal-wrapper bg-pblack d-flex justify-content-center">
+                        <div class="modal-dialog bg-pblack">
+                            <div class="modal-content bg-pblack">
+                                <div class="modal-header text-pwhite">
+                                    <h2 class="modal-title fs-5 popps-sb pt-40" id="fuera-label"><a href="https://www.youtube.com/@fueradeset" target="_blank">Fuera de Set</a></h2>
+                                    <button type="button" class="btn btn-closing" data-bs-dismiss="modal" aria-label="Cerrar">
+                                        <img src="/img/cerrador_claqueta_64x64.svg" alt="T2F Cerrar">
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="modal-body d-flex flex-wrap justify-content-center align-items-center">
+                                <iframe id="fuera-iframe" class="video-viewer embed-responsive-item"
+                                        src="https://www.youtube.com/embed/QNHbO-Z4yNs?enablejsapi=1"
+                                        title="YouTube video player"
+                                        frameborder="0"
+                                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                        allowfullscreen>
+                                </iframe>
+                                <div class="col-md-12 iframe-text">
+                                    <p class="text-pwhite text-justfy popps-r pt-14"><%= __('projects.modals.row3_p2.p1') %></p>
+                                    <p class="text-pwhite text-justfy popps-r pt-14"><%= __('projects.modals.row3_p2.p2') %></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="container-fluid mb-200px" id="servicios">
