--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -108,7 +108,7 @@
                         <img src="/img/fotos_version_mobile_428X908/seccion1/1-Serie-Tips_Antitusa_214x1216.png" alt="Tips Antitusa" class="parallax-img" data-speed="0.3" data-parallax="scroll">
                     </picture>
                     <div class="caption-container grey-wrapper p-3">
-                        <a href="#" data-bs-toggle="modal" data-bs-target="#">
+                        <a href="https://www.youtube.com/@20de5series" target="_blank">
                             <h3 class="text-pwhite text-center grouch shdw spc pt-22"><%= __('projects.commons.serie') %> - Tips Antitusa</h3>
                         </a>
                     </div>
@@ -153,7 +153,7 @@
                                 <div class="modal-header text-pwhite">
                                     <h2 class="modal-title fs-5 popps-sb pt-40" id="fumo-label"><a href="https://youtu.be/zOYvALbEGsI?si=lMC4SbwjM8txirLf" target="_blank">Fumo y Bebo - Pipe Bueno x Pablo Ocampo | <%= __('projects.commons.off_vid') %></a></h2>
                                     <button type="button" class="btn btn-closing" data-bs-dismiss="modal" aria-label="Cerrar">
-                                        <img src="/img/cerrador_claqueta_64x64.svg" alt="T2F Cerrar">
+                                        <i class="bi bi-x-lg"></i>
                                     </button>
                                 </div>
                             </div>
@@ -188,7 +188,7 @@
                                 <div class="modal-header text-pwhite">
                                     <h2 class="modal-title fs-5 popps-sb pt-40" id="transmi-label"><a href="https://vimeo.com/317812871" target="_blank">TRANSMILENIALS <%= __('projects.commons.piloto') %></a></h2>
                                     <button type="button" class="btn btn-closing" data-bs-dismiss="modal" aria-label="Cerrar">
-                                        <img src="/img/cerrador_claqueta_64x64.svg" alt="T2F Cerrar">
+                                        <i class="bi bi-x-lg"></i>
                                     </button>
                                 </div>
                             </div>
@@ -227,7 +227,7 @@
                                 <div class="modal-header text-pwhite">
                                     <h2 class="modal-title fs-5 popps-sb pt-40" id="tarde-label"><a href="https://youtu.be/mseSKt9ebq8?si=I2lNcSZCq8oyQ_RO" target="_blank">Volviste Tarde - Luisito Muñoz & Pipe Bueno | <%= __('projects.commons.off_vid') %></a></h2>
                                     <button type="button" class="btn btn-closing" data-bs-dismiss="modal" aria-label="Cerrar">
-                                        <img src="/img/cerrador_claqueta_64x64.svg" alt="T2F Cerrar">
+                                        <i class="bi bi-x-lg"></i>
                                     </button>
                                 </div>
                             </div>
@@ -272,7 +272,7 @@
                                 <div class="modal-header text-pwhite">
                                     <h2 class="modal-title fs-5 popps-sb pt-40" id="misteriosa-label"><a href="https://vimeo.com/273802360" target="_blank">Misteriosa Teaser</a></h2>
                                     <button type="button" class="btn btn-closing" data-bs-dismiss="modal" aria-label="Cerrar">
-                                        <img src="/img/cerrador_claqueta_64x64.svg" alt="T2F Cerrar">
+                                        <i class="bi bi-x-lg"></i>
                                     </button>
                                 </div>
                             </div>
@@ -299,7 +299,7 @@
                                 <div class="modal-header text-pwhite">
                                     <h2 class="modal-title fs-5 popps-sb pt-40" id="no-no-label"><a href="https://youtu.be/ounCk95-ctU?si=GtCU_NL8qfkUH3ho" target="_blank">No Me Digas Que No - Pipe Bueno x Luis Alfonso | <%= __('projects.commons.off_vid') %></a></h2>
                                     <button type="button" class="btn btn-closing" data-bs-dismiss="modal" aria-label="Cerrar">
-                                        <img src="/img/cerrador_claqueta_64x64.svg" alt="T2F Cerrar">
+                                        <i class="bi bi-x-lg"></i>
                                     </button>
                                 </div>
                             </div>
@@ -334,7 +334,7 @@
                                 <div class="modal-header text-pwhite">
                                     <h2 class="modal-title fs-5 popps-sb pt-40" id="cantina-label"><a href="https://youtu.be/VJ-DRbDXepE?si=FiRzaNrpnQLzZAN2" target="_blank">La Cantina (Remix) - Hernan Gómez x Luis Alfonso x Pipe Bueno | <%= __('projects.commons.off_vid') %></a></h2>
                                     <button type="button" class="btn btn-closing" data-bs-dismiss="modal" aria-label="Cerrar">
-                                        <img src="/img/cerrador_claqueta_64x64.svg" alt="T2F Cerrar">
+                                        <i class="bi bi-x-lg"></i>
                                     </button>
                                 </div>
                             </div>
@@ -377,7 +377,7 @@
                         <img src="/img/fotos_version_mobile_428X908/seccion_2_proyectos/8-podcast-fuera_de_set-travesaคo_214x916.png" alt="Podcast - Fuera de set" class="parallax-img" data-speed="0.3" data-parallax="scroll">
                     </picture>
                     <div class="caption-container grey-wrapper p-3">
-                        <a href="#" data-bs-toggle="modal" data-bs-target="#fuera-viewer">
+                        <a href="https://www.youtube.com/@fueradeset" target="_blank">
                             <h3 class="text-pwhite text-center grouch shdw spc pt-22">Podcast - Fuera de Set</h3>
                         </a>
                     </div>
@@ -389,7 +389,7 @@
                                 <div class="modal-header text-pwhite">
                                     <h2 class="modal-title fs-5 popps-sb pt-40" id="fuera-label"><a href="https://www.youtube.com/@fueradeset" target="_blank">Fuera de Set</a></h2>
                                     <button type="button" class="btn btn-closing" data-bs-dismiss="modal" aria-label="Cerrar">
-                                        <img src="/img/cerrador_claqueta_64x64.svg" alt="T2F Cerrar">
+                                        <i class="bi bi-x-lg"></i>
                                     </button>
                                 </div>
                             </div>
@@ -510,7 +510,7 @@
                                         <div class="modal-header text-pwhite text-uppercase">
                                             <h5 class="modal-title fs-5 ail-b pt-40" id="mariaD-bio-label"><a href="https://www.imdb.com/name/nm7515371/?ref_=ext_shr_lnk" target="_blank">ceo - <%= __('services.team.staff.maria.position1') %> - <%= __('services.team.staff.maria.position2') %></a></h5>
                                             <button type="button" class="btn btn-closing" data-bs-dismiss="modal" aria-label="Cerrar">
-                                                <img src="/img/cerrador_claqueta_64x64.svg" alt="T2F Cerrar">
+                                                <i class="bi bi-x-lg"></i>
                                             </button>
                                         </div>
                                     </div>
@@ -542,7 +542,7 @@
                                         <div class="modal-header text-pwhite text-uppercase">
                                             <h5 class="modal-title fs-5 ail-b pt-40" id="juanT-bio-label"><a href="https://www.imdb.com/name/nm8008446/?ref_=ext_shr_lnk" target="_blank">ceo - <%= __('services.team.staff.pepino.position1') %> - <%= __('services.team.staff.pepino.position2') %></a></h5>
                                             <button type="button" class="btn btn-closing" data-bs-dismiss="modal" aria-label="Cerrar">
-                                                <img src="/img/cerrador_claqueta_64x64.svg" alt="T2F Cerrar">
+                                                <i class="bi bi-x-lg"></i>
                                             </button>
                                         </div>
                                     </div>
@@ -573,7 +573,7 @@
                                         <div class="modal-header text-pwhite text-uppercase">
                                             <h5 class="modal-title fs-5 ail-b pt-40" id="jeiverP-bio-label"><a href="https://www.imdb.com/name/nm5779094/?ref_=ext_shr_lnk" target="_blank"><%= __('services.team.staff.jeiver.position') %></a></h5>
                                             <button type="button" class="btn btn-closing" data-bs-dismiss="modal" aria-label="Cerrar">
-                                                <img src="/img/cerrador_claqueta_64x64.svg" alt="T2F Cerrar">
+                                                <i class="bi bi-x-lg"></i>
                                             </button>
                                         </div>
                                     </div>
@@ -604,7 +604,7 @@
                                         <div class="modal-header text-pwhite text-uppercase">
                                             <h5 class="modal-title fs-5 ail-b pt-40" id="felipeC-bio-label"><a href="" target="_blank"><%= __('services.team.staff.felipe.position') %></a></h5>
                                             <button type="button" class="btn btn-closing" data-bs-dismiss="modal" aria-label="Cerrar">
-                                                <img src="/img/cerrador_claqueta_64x64.svg" alt="T2F Cerrar">
+                                                <i class="bi bi-x-lg"></i>
                                             </button>
                                         </div>
                                     </div>
@@ -636,7 +636,7 @@
                                         <div class="modal-header text-pwhite text-uppercase">
                                             <h5 class="modal-title fs-5 ail-b pt-40" id="lauraC-bio-label"><a href="" target="_blank"><%= __('services.team.staff.lauc.position') %></a></h5>
                                             <button type="button" class="btn btn-closing" data-bs-dismiss="modal" aria-label="Cerrar">
-                                                <img src="/img/cerrador_claqueta_64x64.svg" alt="T2F Cerrar">
+                                                <i class="bi bi-x-lg"></i>
                                             </button>
                                         </div>
                                     </div>
@@ -664,7 +664,7 @@
                                         <div class="modal-header text-pwhite text-uppercase">
                                             <h5 class="modal-title fs-5 ail-b pt-40" id="lauraB-bio-label"><a href="" target="_blank"><%= __('services.team.staff.laub.position') %></a></h5>
                                             <button type="button" class="btn btn-closing" data-bs-dismiss="modal" aria-label="Cerrar">
-                                                <img src="/img/cerrador_claqueta_64x64.svg" alt="T2F Cerrar">
+                                                <i class="bi bi-x-lg"></i>
                                             </button>
                                         </div>
                                     </div>
@@ -693,7 +693,7 @@
                                         <div class="modal-header text-pwhite text-uppercase">
                                             <h5 class="modal-title fs-5 ail-b pt-40" id="valentinaC-bio-label"><a href="" target="_blank">COMMUNITY MANAGER</a></h5>
                                             <button type="button" class="btn btn-closing" data-bs-dismiss="modal" aria-label="Cerrar">
-                                                <img src="/img/cerrador_claqueta_64x64.svg" alt="T2F Cerrar">
+                                                <i class="bi bi-x-lg"></i>
                                             </button>
                                         </div>
                                     </div>
@@ -725,7 +725,7 @@
                                         <div class="modal-header text-pwhite text-uppercase">
                                             <h5 class="modal-title fs-5 ail-b pt-40" id="marioI-bio-label"><a href="" target="_blank"><%= __('services.team.staff.mario.position1') %> - <%= __('services.team.staff.mario.position2') %> - CASTING</a></h5>
                                             <button type="button" class="btn btn-closing" data-bs-dismiss="modal" aria-label="Cerrar">
-                                                <img src="/img/cerrador_claqueta_64x64.svg" alt="T2F Cerrar">
+                                                <i class="bi bi-x-lg"></i>
                                             </button>
                                         </div>
                                     </div>
